<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RecipeTDS</string>
    <string name="ingredients_label">Ingredients:</string>
    <string name="servings_label">Servings: </string>
    <string name="steps_label">Steps:</string>
    <string name="back_to_list">Back to List</string>
    <string name="view_favorites">My Favorite Recipes</string>
    <string name="favorites_title">Your Favorites</string>
    <string name="tab_recipes">Recipes</string>
    <string name="tab_ingredients">My Ingredients</string>
    <string name="search_recipes_hint">Search recipes</string>
    <string name="category_label">Category:</string>
    <string name="search_pantry_hint">Search in your pantry</string>
    <string name="add_ingredient_title">Add Ingredient</string>
    <string name="edit_ingredient_title">Edit Ingredient</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="remove_ingredient_desc">Remove ingredient</string>
    <string name="title_settings">Settings</string>
    <string name="label_dark_mode">Dark Mode</string>
    <string name="desc_dark_mode">Enable dark blue theme</string>
    <string name="hint_ingredient_name">Ingredient name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="search_query_hint_example">e.g., Frango, Tomate</string>
    <string-array name="units_array">
        <item>gramas</item>
        <item>ml</item>
        <item>unidades</item>
        <item>colheres de sopa</item>
        <item>colheres de chá</item>
        <item>chávenas</item>
    </string-array>
    <string name="hint_unit">Unit</string>
    <string name="arrow">arrow</string>
    <string name="favorite">Favorite</string>
</resources>
